[package]
name = "monero-burn"
version = "0.1.0"
authors = ["Kostis Karantias <kkarantias@gmail.com>"]
edition = "2018"
description = "Generate burn addresses for Monero."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = {version = "2.0", features = ["serde"]}
hex = "0.4.1"
monero = "0.5.0"
sha2 = "0.8.1"
structopt = "0.3.9"

[dev-dependencies]
quickcheck = "0.9"