[package]
name = "monero-burn"
version = "0.4.1"
authors = ["Kostis Karantias <kkarantias@gmail.com>"]
edition = "2018"
description = "Generate burn addresses for Monero."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
monero = "0.7.0"
structopt = "0.3.12"
num-bigint = "0.2.6"

[dev-dependencies]
quickcheck = "0.9.2"